--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="inner">
         <h1>
           <span>
-            A curious <br />
-            fullstack web developer</span
+            Hi, Im Charles <br />
+            A fullstack web developer</span
           >
         </h1>
       </div>
