--- a/index.html
+++ b/index.html
@@ -132,6 +132,47 @@
         </article>
       </div>
     </section>
+    <section id="two">
+      <div class="inner">
+        <article class="alt">
+          <div class="content">
+            <header>
+              <h3>iHaveACarrot.com</h3>
+            </header>
+            <div class="image fit">
+              <img src="images/iHaveACarrot.jpg" alt="iHaveACarrot" />
+            </div>
+            <p>
+             A fullstack react app using MongoDB/Mongoose for data persistence. Also on this app I am using JWT for authentication compared to sessions on the others. Instead of hand-rolling a lot of css I am using materialize css framework.
+            </br>
+            TEST LOGIN- </br> email: charlie@gmail.com </br>user: test123 </br> pass: test123 
+            </p>
+		  </div>
+		  <div>
+			  <a id="live-links" target="_blank" href="http://www.ihaveacarrot.com">View Site</a>
+			  <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/ihaveacarrot">View Code</a>
+		  </div>
+        </article>
+        <article >
+          <div class="content">
+            <header>
+              <h3>100daysofhorror.com</h3>
+            </header>
+            <div class="image fit">
+              <img src="images/100day.jpg" alt="thisisdevmountain" />
+            </div>
+            <p>
+              A React app with no current database. This app is an idea for a fun horror movie challenge. 100 movies are listed with deadline to watch them all. 
+              This is just a React frontend at this point.
+			  
+		  </div>
+		  <div>
+			<a id="live-links" target="_blank" href="http://www.100daysofhorror.com">View Site</a>
+			<a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/100daysofhorror">View Code</a>
+		</div>
+        </article>
+      </div>
+    </section>
 
     <!-- Three -->
     <section id="three">
