--- a/index.html
+++ b/index.html
@@ -94,7 +94,45 @@
         <article>
           <div class="content">
             <header>
-              <h3>devtennis.xyz</h3>
+              <h3>apostlesoftheabyss.com</h3>
+            </header>
+            <div class="image fit">
+              <img src="images/guild.jpg" alt="guild" />
+            </div>
+            <p>
+              A fullstack live WIP for a gaming guild. MERN Stack. Additional libraries like rechart and formik. Actual client project. 
+            </p>
+		  </div>
+		  <div>
+			  <a id="live-links" target="_blank" href="http://www.apostlesoftheabyss.com">View Site</a>
+			  <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/guildsite">View Code</a>
+		  </div>
+        </article>
+        <article class="alt">
+          <div class="content">
+            <header>
+              <h3>Redux live example</h3>
+            </header>
+            <div class="image fit">
+              <img src="images/redux.jpg" alt="redux" />
+            </div>
+            <p>
+              This is an example site I made in order to teach a fellow dev how to setup redux in a React app. It is an example of how nested components with no close parent component can subscribe to the Redux store to share data. 
+            </p>
+		  </div>
+		  <div>
+			<a id="live-links" target="_blank" href="https://youthful-neumann-b166de.netlify.app/">View Site</a>
+			<a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/redux-test">View Code</a>
+		</div>
+        </article>
+      </div>
+    </section>
+    <section id="two">
+      <div class="inner">
+        <article>
+          <div class="content">
+            <header>
+              <h3>Devtennis.xyz</h3>
             </header>
             <div class="image fit">
               <img src="images/devtennis.jpg" alt="devtennis" />
@@ -143,6 +181,7 @@
               <img src="images/iHaveACarrot.jpg" alt="iHaveACarrot" />
             </div>
             <p>
+            Heads Up - This was a paid api. I have since wuick paying for it so the sites main search feature is inoperable. :(
              A fullstack react app using MongoDB/Mongoose for data persistence. Also on this app I am using JWT for authentication compared to sessions on the others. Instead of hand-rolling a lot of css I am using materialize css framework.
             </br>
             TEST LOGIN- </br> email: charlie@gmail.com </br>user: test123 </br> pass: test123 
