--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <img src="images/iHaveACarrot.jpg" alt="iHaveACarrot" />
             </div>
             <p>
-            Heads Up - This was a paid api. I have since wuick paying for it so the sites main search feature is inoperable. :(
+            Heads Up - This was a paid api. I have since stopped paying for it so the sites main search feature is inoperable. </br>
              A fullstack react app using MongoDB/Mongoose for data persistence. Also on this app I am using JWT for authentication compared to sessions on the others. Instead of hand-rolling a lot of css I am using materialize css framework.
             </br>
             TEST LOGIN- </br> email: charlie@gmail.com </br>user: test123 </br> pass: test123 
