--- a/index.html
+++ b/index.html
@@ -89,6 +89,46 @@
     </section>
 
     <!-- Two -->
+    <section >
+      <section id="two">
+        <div class="inner">
+          <article>
+            <div class="content">
+              <header>
+                <h3>Url Shortener</h3>
+              </header>
+              <div class="image fit">
+                <img src="images/urlShortner.jpg" alt="guild" />
+              </div>
+              <p>
+                A frontend project is React using svgs and a third party api
+              </p>
+        </div>
+        <div>
+          <a id="live-links" target="_blank" href="https://silly-dijkstra-bcc17e.netlify.app/">View Site</a>
+          <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/urlShortner2.0">View Code</a>
+        </div>
+          </article>
+          <article class="alt">
+            <div class="content">
+              <header>
+                <h3>Rock Paper Scissors</h3>
+              </header>
+              <div class="image fit">
+                <img src="images/rps.jpg" alt="redux" />
+              </div>
+              <p>
+                A Rock Paper Scissors game in React 
+              </p>
+        </div>
+        <div>
+        <a id="live-links" target="_blank" href="https://tender-banach-6f5247.netlify.app/">View Site</a>
+        <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/rps">View Code</a>
+      </div>
+          </article>
+        </div>
+      </section>
+
     <section id="two">
       <div class="inner">
         <article>
