--- a/index.html
+++ b/index.html
@@ -87,7 +87,50 @@
         </p>
       </div>
     </section>
-
+    <section id="two">
+      <div class="inner">
+        <article>
+          <div class="content">
+            <header>
+              <h3>Devtennis.xyz</h3>
+            </header>
+            <div class="image fit">
+              <img src="images/devtennis.jpg" alt="devtennis" />
+            </div>
+            <p>
+              A fullstack E-Commerce website. Features include Stripe checkout,
+              account creation and fully functional cart. Tech includes: React,
+              Redux, PostgreSQL, Node, AWS S3 & SportsRadar API
+            </p>
+		  </div>
+		  <div>
+			  <a id="live-links" target="_blank" href="http://www.devtennis.xyz">View Site</a>
+			  <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/devTennis">View Code</a>
+		  </div>
+        </article>
+        <article class="alt">
+          <div class="content">
+            <header>
+              <h3>Thisisdevmountain.com</h3>
+            </header>
+            <div class="image fit">
+              <img src="images/group.jpg" alt="thisisdevmountain" />
+            </div>
+            <p>
+              A Fullstack app designed for students of DevMountain to upload
+              information on their personal projects for all other students to
+			  view. Made with React, Redux, Node, Chart.js, Socket.io </br>
+			  TEST LOGIN- </br> email: test44@test.com </br> pass: test44
+            </p>
+		  </div>
+		  <div>
+			<a id="live-links" target="_blank" href="http://www.thisisdevmountain.com">View Site</a>
+			<a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/restart">View Code</a>
+		</div>
+        </article>
+      </div>
+    </section>
+    
     <!-- Two -->
     <section >
       <section id="two">
@@ -134,7 +177,7 @@
         <article>
           <div class="content">
             <header>
-              <h3>apostlesoftheabyss.com</h3>
+              <h3>A pricing card in React</h3>
             </header>
             <div class="image fit">
               <img src="images/guild.jpg" alt="guild" />
@@ -144,8 +187,8 @@
             </p>
 		  </div>
 		  <div>
-			  <a id="live-links" target="_blank" href="http://www.apostlesoftheabyss.com">View Site</a>
-			  <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/guildsite">View Code</a>
+			  <a id="live-links" target="_blank" href="http://pricing-delta.vercel.app/">View Site</a>
+			  <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/pricingComponent">View Code</a>
 		  </div>
         </article>
         <article class="alt">
@@ -167,91 +210,7 @@
         </article>
       </div>
     </section>
-    <section id="two">
-      <div class="inner">
-        <article>
-          <div class="content">
-            <header>
-              <h3>Devtennis.xyz</h3>
-            </header>
-            <div class="image fit">
-              <img src="images/devtennis.jpg" alt="devtennis" />
-            </div>
-            <p>
-              A fullstack E-Commerce website. Features include Stripe checkout,
-              account creation and fully functional cart. Tech includes: React,
-              Redux, PostgreSQL, Node, AWS S3 & SportsRadar API
-            </p>
-		  </div>
-		  <div>
-			  <a id="live-links" target="_blank" href="http://www.devtennis.xyz">View Site</a>
-			  <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/devTennis">View Code</a>
-		  </div>
-        </article>
-        <article class="alt">
-          <div class="content">
-            <header>
-              <h3>Thisisdevmountain.com</h3>
-            </header>
-            <div class="image fit">
-              <img src="images/group.jpg" alt="thisisdevmountain" />
-            </div>
-            <p>
-              A Fullstack app designed for students of DevMountain to upload
-              information on their personal projects for all other students to
-			  view. Made with React, Redux, Node, Chart.js, Socket.io </br>
-			  TEST LOGIN- </br> email: test44@test.com </br> pass: test44
-            </p>
-		  </div>
-		  <div>
-			<a id="live-links" target="_blank" href="http://www.thisisdevmountain.com">View Site</a>
-			<a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/restart">View Code</a>
-		</div>
-        </article>
-      </div>
-    </section>
-    <section id="two">
-      <div class="inner">
-        <article class="alt">
-          <div class="content">
-            <header>
-              <h3>iHaveACarrot.com</h3>
-            </header>
-            <div class="image fit">
-              <img src="images/iHaveACarrot.jpg" alt="iHaveACarrot" />
-            </div>
-            <p>
-            Heads Up - This was a paid api. I have since stopped paying for it so the sites main search feature is inoperable. </br>
-             A fullstack react app using MongoDB/Mongoose for data persistence. Also on this app I am using JWT for authentication compared to sessions on the others. Instead of hand-rolling a lot of css I am using materialize css framework.
-            </br>
-            TEST LOGIN- </br> email: charlie@gmail.com </br>user: test123 </br> pass: test123 
-            </p>
-		  </div>
-		  <div>
-			  <a id="live-links" target="_blank" href="http://www.ihaveacarrot.com">View Site</a>
-			  <a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/ihaveacarrot">View Code</a>
-		  </div>
-        </article>
-        <article >
-          <div class="content">
-            <header>
-              <h3>100daysofhorror.com</h3>
-            </header>
-            <div class="image fit">
-              <img src="images/100day.jpg" alt="thisisdevmountain" />
-            </div>
-            <p>
-              A React app with no current database. This app is an idea for a fun horror movie challenge. 100 movies are listed with deadline to watch them all. 
-              This is just a React frontend at this point.
-			  
-		  </div>
-		  <div>
-			<a id="live-links" target="_blank" href="http://www.100daysofhorror.com">View Site</a>
-			<a id="live-links" target="_blank" href="https://github.com/C-E-Campbell/100daysofhorror">View Code</a>
-		</div>
-        </article>
-      </div>
-    </section>
+
 
     <!-- Three -->
     <section id="three">
